chore(reader): mirror canonical curl development API
Co-Authored-By: Claude <noreply@anthropic.com>