@@ -1,6 +1,7 @@
 package karacken.curl;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -89,7 +90,7 @@ final class DeckLeaseRegistry {
         }
         owners.clear();
         requestedReleaseReasons.clear();
-        return List.copyOf(leases);
+        return Collections.unmodifiableList(new ArrayList<>(leases));
     }
 
     synchronized boolean hasOutstandingLeases() {
