@@ -1,5 +1,7 @@
 package karacken.curl;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -9,19 +11,32 @@ public final class PortraitPageDeck<T> implements PageDeck<T> {
     private final PageImage<T> previous;
     private final PageImage<T> current;
     private final PageImage<T> next;
+    private final boolean previousAvailable;
+    private final boolean nextAvailable;
     private final List<PageImage<T>> pages;
 
     public PortraitPageDeck(
             PageImage<T> previous,
             PageImage<T> current,
             PageImage<T> next) {
+        this(previous, current, next, true, true);
+    }
+
+    public PortraitPageDeck(
+            PageImage<T> previous,
+            PageImage<T> current,
+            PageImage<T> next,
+            boolean previousAvailable,
+            boolean nextAvailable) {
         this.previous = Objects.requireNonNull(previous, "previous");
         this.current = Objects.requireNonNull(current, "current");
         this.next = Objects.requireNonNull(next, "next");
+        this.previousAvailable = previousAvailable;
+        this.nextAvailable = nextAvailable;
         generationId = current.getGenerationId();
         requireGeneration(previous);
         requireGeneration(next);
-        pages = List.of(previous, current, next);
+        pages = Collections.unmodifiableList(Arrays.asList(previous, current, next));
     }
 
     @Override
@@ -37,6 +52,30 @@ public final class PortraitPageDeck<T> implements PageDeck<T> {
     @Override
     public List<PageImage<T>> getPages() {
         return pages;
+    }
+
+    @Override
+    public boolean canTurn(PageChange pageChange) {
+        Objects.requireNonNull(pageChange, "pageChange");
+        if (pageChange == PageChange.PREVIOUS) {
+            return previousAvailable;
+        }
+        if (pageChange == PageChange.NEXT) {
+            return nextAvailable;
+        }
+        return false;
+    }
+
+    @Override
+    public PageImage<T> getSettlementPage(PageChange pageChange) {
+        Objects.requireNonNull(pageChange, "pageChange");
+        if (pageChange == PageChange.PREVIOUS) {
+            return previous;
+        }
+        if (pageChange == PageChange.NEXT) {
+            return next;
+        }
+        return current;
     }
 
     public PageImage<T> getPrevious() {
